--- a/SGIP/src/Pantallas/P_AdminRoles.form
+++ b/SGIP/src/Pantallas/P_AdminRoles.form
@@ -280,7 +280,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Lista de Usuarios"/>
+        <Property name="text" type="java.lang.String" value="Lista de Roles"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="jButton3">
